# tbmalt

./: .git-submodules.sh  .gitignore  .gitmodules  .pylintrc  LICENSE  README.rst  dev_env.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: Makefile  README  requirements.txt
docs/source/: conf.py  developer_guide.rst  development.rst  documentation.rst  index.rst  release_notes.rst  tutorials.rst  usage.rst
examples/example_01/: example_01.py  example_01_setup.py  example_02.py  example_02_setup.py  example_03.py  example_03_setup.py
examples/example_02_grad/: example_grad_batch.py  example_grad_sin.py  ref_charge
examples/example_dos/: example_dos.py  example_dos_ddp.py
examples/example_forces/: analytical.py  auorg.hdf5  autograd.py  custom_geometries.hdf5  dh0_minimal_example.py  finite_diff.py  forces.py  test_auorg.hdf5  total_energy  viz_autograd.py
misc/: pylintrc
tbmalt/: __init__.py  requirements.txt
tbmalt/common/: __init__.py  batch.py  constants.py  exceptions.py
tbmalt/data/: __init__.py  constant.py  elements.py  sk.py  units.py
tbmalt/io/: __init__.py  dataset.py  skf.py
tbmalt/ml/: __init__.py  acsf.py  calculator.py  integralfeed.py  integralfeeds.py  loss_function.py  module.py  skfeeds.py
tbmalt/physics/: __init__.py  electronics.py  filling.py
tbmalt/structures/: __init__.py  basis.py  cell.py  geometry.py  orbitalinfo.py  periodic.py  periodicity.py
tbmalt/tests/: __init__.py  conftest.py  pytest.ini  test_utils.py
tbmalt/tools/: __init__.py  downloaders.py
tests/: conftest.py  test_utils.py
tests/unittests/: test_acsf.py  test_basis.py  test_batch.py  test_common.py  test_coulomb.py  test_dataset.py  test_dftb.py  (+25 more)
(+89 files in other folders)
