[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tbmalt"
version = "0.0.0"
authors = [{name = "TBMaLT developers"},]
dependencies = [
    "numpy", "scipy", "torch", "h5py", "ase", "pydantic", "tomli", "dscribe",
]
requires-python = ">=3.8"
description = "Tight Binding Machine Learning Toolkit"
readme = {file = "README.rst", content-type = "text/x-rst"}
license = {text = "LGPLv3+"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/tbmalt/tbmalt.git"
Repository = "https://github.com/tbmalt/tbmalt.git"
Issues = "https://github.com/tbmalt/tbmalt/issues"
# Documentation =
# Changelog =

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
markers = [
    "grad: Marks tests which perform 'gradcheck' evaluations, this can be slow."
]
