[metadata]
name = tbmalt
version = 0.0.0
description = Tight Binding Machine Learning Toolkit
long_description = file: README.rst
long_description_content_type = text/x-rst
license = LGPL-3.0-or-later
license_files =
    COPYING
    COPYING.LESSER

[options]
packages = find:
install_requires =
    numpy
    scipy
    torch
    h5py
    ase
tests_require =
    pytest
    pytest-cov
python_requires = >=3.8
